deploy/openshift/hawkular-openshift-agent.yaml
id: hawkular-openshift-agent
kind: Template
apiVersion: v1
name: Hawkular OpenShift Agent Template
metadata:
  name: hawkular-openshift-agent
  metrics-infra: agent
parameters:
- description: The version of the image to use
  name: IMAGE_VERSION
  value: dev
objects:
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: hawkular-agent
    labels:
      metrics-infra: agent
- apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    name: hawkular-openshift-agent
    labels:
      name: hawkular-openshift-agent
      metrics-infra: agent
  spec:
    selector:
      matchLabels:
        name: hawkular-openshift-agent
    template:
      metadata:
        labels:
          name: hawkular-openshift-agent
          metrics-infra: agent
      spec:
        serviceAccount: hawkular-agent
        containers:
        - image: hawkular/hawkular-openshift-agent:${IMAGE_VERSION}
          name: hawkular-openshift-agent
          command:
            - "/opt/hawkular/hawkular-openshift-agent"
            - "-config"
            - "/hawkular-openshift-agent-configuration/config.yaml"
            - "-v"
            - "4"
          volumeMounts:
          - name: hawkular-metrics-certificate
            mountPath: "/hawkular-metrics-certificate"
          - name: hawkular-openshift-agent-configuration
            mountPath: "/hawkular-openshift-agent-configuration"
        volumes:
        - name: hawkular-metrics-certificate
          secret:
            secretName: hawkular-metrics-certificate
        - name: hawkular-openshift-agent-configuration
          configMap:
            name: hawkular-openshift-agent-configuration
        - name: hawkular-openshift-agent
          configMap:
            name: hawkular-openshift-agent-configuration
