deploy/openshift/hawkular-openshift-agent-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: hawkular-openshift-agent
  labels:
    metrics-infra: agent
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    name: hawkular-openshift-agent
---
apiVersion: v1
kind: Route
metadata:
  name: hawkular-openshift-agent
  labels:
    metrics-infra: agent
spec:
  path: /status
  to:
    kind: Service
    name: hawkular-openshift-agent
    weight: 100
